[package]
name = "vmware_horizon-exporter"
version = "1.0.0-20230422"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
fern = "0.6.1"
getopts = "0.2.21"
lazy_static = "1.4.0"
log = "0.4.17"
prometheus = { version = "0.13.3", features = ["process"] }
reqwest = { version = "0.11.13", features = ["blocking", "native-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
simple-error = "0.2.3"
tiny_http = "0.12.0"

